--- a/python/hands-on/flask-01-02-hello-world-app-Jinja-Template/flask-02-jinja-template/templates/body.html
+++ b/python/hands-on/flask-01-02-hello-world-app-Jinja-Template/flask-02-jinja-template/templates/body.html
@@ -10,7 +10,7 @@
     <h1>This is my first number {{ num1 }}</h1>
     <h1>This is my second number {{ num2 }}</h1>
 
-    <h2>This is my number {{ multiplication }}</h2>
+    <h2 style="color: red;">This is my number {{ multiplication }}</h2>
     
 </body>
 </html>
