--- a/aws-cloudformation/Project-101-kittens-carousel-static-website-ec2/templates/index.html
+++ b/aws-cloudformation/Project-101-kittens-carousel-static-website-ec2/templates/index.html
@@ -59,16 +59,16 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="./cat0.jpg" alt="Cuties First">
+        <img src="../images/cat0.jpg" alt="Cuties First">
       </div>
       <div class="item">
-        <img src="./cat1.jpg" alt="Cuties Second">
+        <img src="../images/cat1.jpg" alt="Cuties Second">
       </div>
       <div class="item">
-        <img src="./cat2.jpg" alt="Cuties Third">
+        <img src="../images/cat2.jpg" alt="Cuties Third">
       </div>
       <div class="item">
-        <img src="./cat3.png" alt="Cuties Forth">
+        <img src="../images/cat3.png" alt="Cuties Forth">
       </div>
     </div>
 
